# flask-htmx-tailwind

./: .flaskenv  README.md  pyproject.toml
src/flask_rye_htmx_tailwind/: __init__.py
src/flask_rye_htmx_tailwind/templates/: base.html  feed.html
src/flask_rye_htmx_tailwind/templates/partials/: entry.html  entry_page.html
